tests/ui/linkage-attr/raw-dylib/windows/import-name-type-multiple.stderr
error[E0538]: malformed `link` attribute input
  --> $DIR/import-name-type-multiple.rs:10:1
   |
LL | #[link(name = "foo", kind = "raw-dylib", import_name_type = "decorated", import_name_type = "decorated")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^------------------------------^^
   |                                                                          |
   |                                                                          found `import_name_type` used as a key more than once
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/external-blocks.html#the-link-attribute>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0538`.
